# nn-evoution

./: .gitignore  CMakeLists.txt  FCLayer.cpp  FCLayer.h  FlattenLayer.cpp  FlattenLayer.h  Layer.h  NeuralNet.cpp  NeuralNet.h  README.md  THALayer.cpp  THALayer.h  eigen_test.cpp  main.cpp
NadavAI/: CMakeLists.txt  board.cpp  board.h  entities.cpp  entities.h  main_NadavAI.cpp  stats.cpp  stats.h  test.cpp  utils.cpp  utils.h
NadavAI/visualization/: CMakeLists.txt  main.cpp  main_gui.cpp  main_viz.cpp  visualization.cpp  visualization.h  viz_main.cpp
misc_util/: CMakeLists.txt  misc_util.cpp  misc_util.h
mnist/: CMakeLists.txt  FlattenLayer.cpp  FlattenLayer.h  main_mnist.cpp  mnist.cpp  mnist.h
